samples/_failures_safe/1761148776_94ca7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d220e970.c: In function ‘main’:
./samples/SAFE/__tmp_d220e970.c:168:9: error: expected declaration or statement at end of input
  168 |         if (push_token(stack, tokens[i]) == 0) {
      |         ^~
./samples/SAFE/__tmp_d220e970.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d220e970.c:168:9: error: expected declaration or statement at end of input
